2002-02-13  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdkinternals.h: Add some more GdkDebugFlags, for more
	fine-grained debugging output (mainly used in the Win32 backend).

	* gdk/gdk.c: Corresponding additions to the gdk_debug_keys table.

Wed Feb 13 15:42:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktooltips.[ch] gtkwidget.c: Implement Control-F1
	as toggle-tooltips-mode.

	* gtk/gtktooltips.c: Remove parsing of tooltips style
	string from here ... now in gtkrc.c.

Wed Feb 13 12:41:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmain.c (gtk_init_check): g_warning() if setting
	the local fails, like gdk_set_locale() did.

	* gdk/x11/gdkselection-x11.c (gdk_text_property_to_utf8_list): 
	Don't free local_list if local_count == 0. (#71241, reported
	by Kevin Vandersloot.)

	* gdk/x11/gdkselection-x11.c (gdk_text_property_to_text_list): 
	Clean up list == NULL handling and failure.

Wed Feb 13 11:27:31 2002  Owen Taylor  <otaylor@redhat.com>

	* tests/testtreeview.c (typesystem_recurse): Cast GType
	to long and use %ld to fix warning. (#71318, Morten Welinder)

Wed Feb 13 13:26:39 2002  Tim Janik  <timj@gtk.org>

	* gtk/gtkmenu.c: fix figuring accel path and changing behaviour.

Wed Feb 13 06:42:37 2002  Tim Janik  <timj@gtk.org>

	* gtk/gtktable.c (gtk_table_size_allocate_pass1): partly revert
	my recent expanding change to not expand the table if all children
	have not epxand behaviour. this fixes palette views which often
	use homogeneous non-expanding tables.

Tue Feb 12 14:27:41 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_row_deleted): emit
	row_deleted before we start unreffing the nodes ourselves
	(gtk_tree_model_sort_increment_stamp): always increment the stamp,
	and not only if the stamp equals 0 (pointed out by Darin Adler)

	* gtk/gtktreemodel.c (gtk_tree_row_ref_deleted_callback): we want
	to continue the while loop and not the nested for loop.

Tue Feb 12 02:19:49 2002  Tim Janik  <timj@gtk.org>
